syntax = "proto3";

option go_package = "github.com/sandokandias/grpc-consumer-research/backend/grpc/api";

package proto;

service PaymentService {
	rpc pay (PayRequest) returns (stream PayResponse);
}
 
message PayRequest {
    int64 amount = 1;
    string description = 2;
}

message PayResponse {
    string payId = 1;
    string status = 2;
    string dateTime = 3;
}
